2010-10-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Use radio buttons for View->Editor->Color Schemes menu.
   Don't hide the menu when only the default item is available.


2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.c, data/filetypes.d:
   Add missing C99 keyword 'restrict' (#3046716).
   Add missing D1 keywords 'ref' and 'macro'.
   Add D2 keywords.
 * tagmanager/c.c:
   Parse Vala functions with contracts (#3080232).
 * src/project.c:
   Fix saving project indent prefs straight after using project
   properties.
 * src/highlighting.c, src/filetypes.c:
   Prevent debug message about a missing 'default' named style when
   using just a user color scheme file.


2010-10-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/search.c:
   Fix off-by-one bug in 'search_mark_all'.


2010-10-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/get.c:
   Ignore D /+ +/ comments.
 * tagmanager/c.c:
   Ignore D unittest blocks.
   Parse D template functions with constraints.
 * src/keybindings.c, src/keybindings.h, doc/geany.txt, doc/geany.html:
   Add 'Insert New Line Before/After Current' keybindings (based on
   patch by Eugene Arshinov, thanks).
 * src/document.c:
   Use secondary text for 'file not found on disk' dialog.


2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c:
   Fix build with GLib 2.8.


2010-10-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/socket.c, src/Makefile.am, src/ui_utils.c,
   configure.ac, doc/geany.txt, doc/geany.html, wscript, TODO:
   Revert X11 workspace socket support as it needs more work; moved
   to workspace-sockets branch.


2010-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geanywraplabel.c:
   Fix build with GLib 2.8.
 * src/dialogs.c, src/about.c, THANKS: