@@ -1,0 +1,24 @@
+# Set of styles like the Geany <= 0.19 Python/script defaults with gray comments.
+
+[named_styles]
+# style names to use in filetypes.* [styling] sections
+# use foreground;background;bold;italic
+# normally background should be left blank to use the "default" style
+
+default=0x000000;0xffffff
+comment=0x808080
+commentdoc=0x404000
+number=0x400080
+# keyword
+word=0x600080;;true
+# e.g. global types from a *.c.tags file
+word2=0x9f0200;;true
+string=0x008000
+preprocessor=0x007f7f
+operator=0x300080
+# unterminated string
+stringeol=0x000000;0xe0c0e0
+type=0x0000d0;;true
+
+
+
