@@ -3,6 +3,8 @@
  * src/highlighting.c:
    Use radio buttons for View->Editor->Color Schemes menu.
    Don't hide the menu when only the default item is available.
+ * data/colorschemes, data/colorschemes/alt.conf, wscript, Makefile.am:
+   Add alternative color scheme based on Python colors.
 
 
 2010-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
